# DevNotes

./: .gitignore  Makefile  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: diagnostico-implementacao.md
prompts/: 01_Prompt_de_Planejamento.md  01_R_Planejamento_do_Projeto.md  02_Prompt_Inicial_de_Levantamento_e_Análise_de_Requisitos.md  02_R_Planejamento_do_Projeto_DevNotes_Local.md  02_R_Prompt_Inicial_de_Levantamento_e_Análise_de_Requisitos.md  04_Prompt_de_Arquitetura_Design_da_Solução.md  05_Prompt_Refinado_do_Levantamento_e_Análise_de_Requisitos.md  05_Prompt_de_Implementação_Codificação.md  05_R_Prompt_Refinado_do_Levantamento_e_Análise_de_Requisitos.md  06.02_Prompt_de_ Testes_02.md  06_Prompt_de_Arquitetura_Design_da_Solução.md  06_R_Arquitetura_Design_da_Solução.md  07.01_Prompt_de_Manutenção_Evolução_01.md  07.02_Prompt_de_Manutenção_Evolução_02.md  07_Prompt_de_Implementação_Codificação.md  08_Prompt_de_ Testes_01.md
scripts/: seed_random_notes.py
tarefas/: FEAT-001-devnotes-local-mvp.md  TASK-001-criar-estrutura-inicial-projeto.md  TASK-002-configurar-ambiente-python-venv.md  TASK-009-implementar-edicao-conteudo.md  TASK-013-validar-tamanho-maximo-upload.md  TASK-016-gravar-metadados-conteudo-arquivo.md  TASK-018-implementar-pesquisa-textual-filtros.md  TASK-019-implementar-visualizacao-pre-code.md  TASK-022-documentar-readme.md  US-001-gerenciar-conteudos-tecnicos-locais.md
tests/: conftest.py  test_content_service.py  test_delete.py  test_encoding_service.py  test_routes.py  (+3 more)
(+69 files in other folders)
