[project]
name = "devnotes"
version = "1.0.0"
description = "Aplicação local para organizar e reutilizar conteúdos técnicos"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy==2.0.36",
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
    "pyyaml==6.0.2",
    "aiofiles==24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "httpx==0.27.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
