[project]
name = "devnotes"
version = "1.0.0"
description = "Aplicação local para organizar e reutilizar conteúdos técnicos"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py311"]
